Remove warnings for calls to newInstance()